<resources>
    <string name="app_name">Movieeee2</string>
    <string name="title">title</string>
    <string name="release_date">release date :</string>
    <string name="_2051">2051</string>
    <string name="rating">rating :</string>
    <string name="_9_10">9 / 10</string>
    <string name="add_as_favourite">Add as favourite</string>
    <string name="videos">Videos</string>
    <string name="no_videos_available">No videos available</string>
    <string name="synopsis">Synopsis</string>
    <string name="desc_uykujn_gkyuiki_uiki">desc uykujn gkyuiki uiki</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="author">Author :</string>
    <string name="author_name">Author name</string>
    <string name="comment">COMMENT :</string>
    <string name="h_hi_hu_l_m">h hi hu l,m</string>
    <string name="visit">Visit</string>
    <string name="url_url_url">url url url</string>
    <string name="trailer">trailer</string>
    <string name="offline">You are offline.You can just see your favourites</string>
    <string name="oops">Oops</string>
    <string name="movie_url">http://api.themoviedb.org/3/movie/</string>
    <string name="image_url">https://image.tmdb.org/t/p/w300</string>
    <string name="add_as_fav">Add as favourite</string>
    <string name="remove_frm_fav">Remove from Favourites</string>
    <string name="popular_in_menu">popular</string>
    <string name="highest_rated_in_menu">highest_rated</string>
    <string name="favourites_in_menu">favourites</string>
</resources>
