<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_in_detail_scroll_view"
    tools:context="com.example.reshmanjali.movieeee2.InDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_backdrop_in_mdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/id_title_tv_mdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="serif"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/id_date_tv_in_mdetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2051"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <ImageView
                android:id="@+id/id_poster_in_mdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:cropToPadding="true"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/id_rating_tv_in_mdetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9_10"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <Button
                android:id="@+id/id_fav_btn_in_mdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="serif"
                android:text="@string/add_as_favourite"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/id_trailors_no_data_inDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_videos_available"
                android:textSize="@dimen/textsize"
                android:visibility="gone" />

            <include layout="@layout/trailers" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/synopsis"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/id_overview_tv_in_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/desc_uykujn_gkyuiki_uiki" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/id_reviews_no_data_inDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reviews_yet"
            android:textSize="25sp"
            android:visibility="gone" />

        <include layout="@layout/reviews" />
    </LinearLayout>
</ScrollView>
