<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/id_popular_menu"
        android:onClick="clickedPopular"
        android:orderInCategory="1"
        android:title="@string/popular_in_menu"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/id_highest_rated_menu"
        android:onClick="clickedHighestRated"
        android:orderInCategory="2"
        android:title="@string/highest_rated_in_menu"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/id_Favourites"
        android:onClick="clickedFavouritesInMenu"
        android:orderInCategory="3"
        android:title="@string/favourites_in_menu"
        app:showAsAction="collapseActionView" />

</menu>