<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#b4e2b4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/id_author_tv_each_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/author_name"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/id_says_that_each_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/comment"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/id_comment_tv_each_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/h_hi_hu_l_m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/id_review_url_ech_reviewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/url_url_url" />
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>